changes to compile java 11